2010-02-10

	* libsylph/filter.c: filter_write_file(): fixed crash.

2010-02-10

	* libsylph/filter.[ch]
	  src/prefs_filter_edit.[ch]
	  src/addressbook.[ch]
	  src/main.c: added a new filter match type: is (not) in addressbook.
	  addressbook_has_address(): new function for fast search of address
	  book by addresses.

2010-02-05

	* src/setup.c: confirm on cancel. Modified messages.

2010-02-05

	* src/setup.c: check the input values for address, ID and server.

2010-02-05

	* src/mainwindow.c: new_account_cb(): don't update UI when cancelled.

2010-02-05

	* src/setup.c: modified messages.

2010-02-05

	* src/main.c
	  src/setup.[ch]
	  src/mainwindow.c: implemented new account setup wizard.

2010-02-04

	* src/mimeview.c
	  src/rfc2015.c: fixed crash when checking signature while GnuPG is
	  not available.

2010-02-02

	* src/addr_compl.c: address_completion_complete_address_in_entry():
	  don't open completion menu if entry equals to the completed address.

2010-01-29

	* version 3.0.0beta7

2010-01-29

	* src/compose.c: applied the patch: Preserve 'Auto wrapping' setting
	  when saving to and loading from drafts (thanks to Antonio Ospite).

2010-01-28

	* libsylph/libsylph-0.def
	  src/libsylpheed-plugin-0.def: updated.
	* configure.in: bumped the version.

2010-01-27

	* libsylph/prefs_common.[ch]
	  src/prefs_common_dialog.c:
	  src/compose.c: made address auto-registration configurable.

2010-01-27

	* src/addressbook.c
	  src/editbook.c: show translated messages on the statusbar.
	  Replaced sprintf() with g_snprintf(). Removed global
	  addressbook_msgbuf[].
	  Prohibit addressbook names begin with '@'.

2010-01-26

	* src/compose.c
	  src/addressbook.[ch]
	  src/addressadd.[ch]
	  src/addrindex.[ch]: implemented auto-registration of new recipients.

2010-01-21

	* src/main.c: check_gpg(): show more verbose debug messages.

2010-01-21

	* src/compose.[ch]
	  src/plugin.[ch]
	  src/main.c: added new plug-in APIs for compose window: