@@ -1,3 +1,8 @@
+2010-02-12
+
+	* src/addressbook.c: lock addr_table since it can be accessed from
+	  sub threads.
+
 2010-02-10
 
 	* libsylph/filter.c: filter_write_file(): fixed crash.
